kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blogging-app
  labels:
    name: blogging-app
    environment: development
