kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogging-app-service
  namespace: blogging-app
  labels:
    app: blogging-app
spec:
  type: LoadBalancer
  selector:
    app: blogging-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  sessionAffinity: None
